observability/prometheus-aggregation-gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-aggregation-gateway
spec:
  ports:
  - name: http
    port: 80
  selector:
    app.kubernetes.io/name: prometheus-aggregation-gateway
