observability/prometheus-aggregation-gateway/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: prometheus-aggregation-gateway
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus-aggregation-gateway.microspray.io
    http:
      paths:
      - backend:
          service:
            name: prometheus-aggregation-gateway
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prometheus-aggregation-gateway.microspray.io
    secretName: prometheus-aggregation-gateway-certs
